Finished Home Page Part 1
Completed part 1 and experimented with  js/jquery for alternative background image transitioning

--- a/wedding_website/index.html
+++ b/wedding_website/index.html
@@ -21,7 +21,7 @@
 				</div>
 				<div class="nav">
 					<ul>
-						<li><a href="#">Home</a></li>
+						<li><a href="#" class="active">Home</a></li>
 						<li><a href="#">Couple</a></li>
 						<li><a href="#">Story</a></li>
 						<li><a href="#">Events</a></li>
@@ -34,12 +34,70 @@
 		</div>
 	</header>
 
+	<!-- Home Section start -->
 	<section class="home-section">
-		<div class="slide" style="background-image: url('img/slides/slide_1.jpg');">
+		<!-- Slide start -->
+		<div class="slide active" id="slideshow" style="background-image: url('img/slides/slide_1.jpg');">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="home-content">
+						<p>We are Getting Married!</p>
+						<h1>Jorge & Victoria</h1>
+						<span>July 6 2024</span>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- Slide end -->
+		<!-- Slide start -->
+		<div class="slide" style="background-image: url('img/slides/slide_2.jpg');">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="home-content">
+						<p>We are Getting Married!</p>
+						<h1>Jorge & Victoria</h1>
+						<span>July 6 2024</span>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- Slide end -->
+		<!-- Slide start -->
+		<div class="slide" style="background-image: url('img/slides/slide_3.jpg');">
+			<div class="container">
+				<div class="row align-items-center">
+					<div class="home-content">
+						<p>We are Getting Married!</p>
+						<h1>Jorge & Victoria</h1>
+						<span>July 6 2024</span>
+					</div>
+				</div>
+			</div>
+		</div>
+		<!-- Slide end -->
+	</section>
+	<!-- Home Section end -->
+
+	<!-- Couple Section start -->
+	<section class="couple-section">
+		<div class="container">
 			<div class="row">
-				
+				<div class="section-title">
+					<h2>Happy Couple</h2>
+					
+				</div>
 			</div>
 		</div>
 	</section>
+
+
+	<!-- Couple Section end -->
+
+
+	<!-- jquery -->
+	<script src="scripts/jquery.min.js"></script>
+
+	<!-- main -->
+	<script src="scripts/main.js"></script>
 </body>
 </html>
