Adding Icons and Renaming Pictures

--- a/wedding_website/index.html
+++ b/wedding_website/index.html
@@ -84,7 +84,18 @@
 			<div class="row">
 				<div class="section-title">
 					<h2>Happy Couple</h2>
-					
+				</div>
+			</div>
+			<div class="row">
+				<div class="couple">
+					<img src="img/Victoria/Victoria_1.jpg" alt="Victoria wearing a white V-neck shirt and a black high waisted skirt opening a black door">
+					<h3>Victoria Fernandez</h3>
+					<p>TODO: Fill out information about me. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+				</div>
+				<div class="couple">
+					<img src="img/Jorge/Jorge_3.jpg" alt="Jorge">
+					<h3>Jorge Riera</h3>
+					<p>TODO: Fill out information about Jorge. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 				</div>
 			</div>
 		</div>
@@ -98,6 +109,6 @@
 	<script src="scripts/jquery.min.js"></script>
 
 	<!-- main -->
-	<script src="scripts/main.js"></script>
+	<script src="scripts/alternative.js"></script>
 </body>
 </html>
