--- a/wedding_website/index.html
+++ b/wedding_website/index.html
@@ -5,6 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Wedding of J & V</title>
 
+	<!-- Font Awesome css -->
+	<link rel="stylesheet" type="text/css" href="styles/font-awesome.css">
+
 	<!-- Main css -->
 	<link rel="stylesheet" type="text/css" href="styles/style.css">
 
@@ -93,6 +96,7 @@
 					<p>TODO: Fill out information about me. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 				</div>
 				<div class="couple">
+					<i class="fas fa-heart"></i>
 					<img src="img/Jorge/Jorge_3.jpg" alt="Jorge">
 					<h3>Jorge Riera</h3>
 					<p>TODO: Fill out information about Jorge. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
