Completed Part 3 and Customized Somewhat
Created a backup from when my site started to vary in style quite a bit from the tutorial. Because my pictures are vertical, it did not look good to me to have all the text on the top half of the picture. Considering having the style switch in phone mode or having the pictures disappear

--- a/wedding_website/index.html
+++ b/wedding_website/index.html
@@ -108,6 +108,90 @@
 
 	<!-- Couple Section end -->
 
+	<!-- Story Section start -->
+
+	<section class="story-section">
+		<div class="container">
+			<div class="row">
+				<div class="section-title">
+					<h2>Our Love Story</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="story-content">
+					<div class="row">
+						<!-- Story Item start -->
+						<div class="story-item">
+							<i class="fas fa-heart"></i>
+							<div class="story-text">
+								<h3>First Meet</h3>
+								<span class="date">Spring 2014</span>
+								<p>We met in the last half of 8th grade, growing closer over video games! We stayed connected purely because Jorge left his phone number in Victoria's yearbook and she reached out to finally play TF2 over the summer. We stayed closely connected ever since!</p>
+							</div>
+							<div class="story-img">
+								<img src="img/story/story_1.jpg" alt="Picture of the happy couple">
+							</div>
+						</div>
+						<!-- Story Item end -->
+						<!-- Story Item start -->
+						<div class="story-item">
+							<i class="fas fa-heart"></i>
+							<div class="story-text">
+								<h3>Officially Together</h3>
+								<span class="date">July 6, 2015</span>
+								<p>After multiple nights of endless gaming and aimless chatting, we finally decided to open up about our little secrets: we liked each other! Neither of us asked the other out, it was just agreed upon that we were officially dating. This started our relationship off on a strong footing, and we are still best friends and close partners today! Not everyone can say they are marrying their best friend.</p>
+							</div>
+							<div class="story-img">
+								<img src="img/story/story_2.jpg" alt="Picture of the happy couple">
+							</div>
+						</div>
+						<!-- Story Item end -->
+						<!-- Story Item start -->
+						<div class="story-item">
+							<i class="fas fa-heart"></i>
+							<div class="story-text">
+								<h3>First Date</h3>
+								<span class="date">July 6, 2016</span>
+								<p>Although we spent many weekends hanging out together and many late nights talking on the phone until we fell asleep, our first year anniversary was also our first date! We visited Bayside Marketplace and took a sunset cruise through Biscayne Bay.</p>
+							</div>
+							<div class="story-img">
+								<img src="img/story/story_3.jpg" alt="Picture of the happy couple">
+							</div>
+						</div>
+						<!-- Story Item end -->
+						<!-- Story Item start -->
+						<div class="story-item">
+							<i class="fas fa-heart"></i>
+							<div class="story-text">
+								<h3>Proposal</h3>
+								<span class="date">December 19, 2021</span>
+								<p>During a Christmas celebration, Jorge hid the ring box at the bottom of Victoria's Secret Santa gift for her to find! He dropped to one knee as she pulled out the box, quickly realizing what was happening and tearing up! He proposed with a beautiful Alexandrite gem and rose gold ring in a cute brown box while we were surrounded by friends.</p>
+							</div>
+							<div class="story-img">
+								<img src="img/story/story_4.jpg" alt="Picture of the happy couple">
+							</div>
+						</div>
+						<!-- Story Item end -->
+						<!-- Story Item start -->
+						<div class="story-item">
+							<i class="fas fa-heart"></i>
+							<div class="story-text">
+								<h3>Moving in Together</h3>
+								<span class="date">January 8, 2022</span>
+								<p>We started off our engagement by moving in to Orlando together. Living together always brings new challenges, and we continue to push forward through what life gives us together!</p>
+							</div>
+							<div class="story-img">
+								<img src="img/story/story_5.jpg" alt="Picture of the happy couple">
+							</div>
+						</div>
+						<!-- Story Item end -->
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<!-- Story Section end -->
 
 	<!-- jquery -->
 	<script src="scripts/jquery.min.js"></script>
