Stopping for the night
12:14 part 4

--- a/wedding_website/index.html
+++ b/wedding_website/index.html
@@ -109,7 +109,6 @@
 	<!-- Couple Section end -->
 
 	<!-- Story Section start -->
-
 	<section class="story-section">
 		<div class="container">
 			<div class="row">
@@ -190,8 +189,49 @@
 			</div>
 		</div>
 	</section>
-
 	<!-- Story Section end -->
+
+	<!-- Event Section start -->
+	<section class="event-section">
+		<div class="container">
+			<div class="row">
+				<div class="section-title">
+					<h2>Celebrate our Love</h2>
+				</div>
+			</div>
+			<div class="row">
+				<!-- Item start -->
+				<div class="event-item">
+					<div class="event-item-inner">
+						<h3>Ceremony</h3>
+						<span class="date">July 6, 2024</span>
+						<span class="time">TBD</span>
+						<p>{ Ceremony Location }</p>
+						<p>The ceremony will be held in Miami, FL</p>
+					</div>
+				</div>
+				<!-- Item end -->
+				<!-- Item start -->
+				<div class="event-item">
+					<div class="event-item-inner">
+						<h3>Reception</h3>
+						<span class="date">July 6, 2024</span>
+						<span class="time">7:00 - 11:00 PM</span>
+						<p>{ Cutler Bay Banquet Hall }</p>
+						<p>18901 SW 106th Ave Suite A-204, Miami, FL 33157</p>
+						<p>Located in: Centre At Cutler Bay </p>
+					</div>
+				</div>
+				<!-- Item end -->
+			</div>
+		</div>
+	</section>
+	<!-- Event Section end -->
+
+
+
+
+
 
 	<!-- jquery -->
 	<script src="scripts/jquery.min.js"></script>
