--- a/wedding_website/index.html
+++ b/wedding_website/index.html
@@ -52,32 +52,6 @@
 			</div>
 		</div>
 		<!-- Slide end -->
-		<!-- Slide start -->
-		<div class="slide" style="background-image: url('img/slides/slide_2.jpg');">
-			<div class="container">
-				<div class="row align-items-center">
-					<div class="home-content">
-						<p>We are Getting Married!</p>
-						<h1>Jorge & Victoria</h1>
-						<span>July 6 2024</span>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- Slide end -->
-		<!-- Slide start -->
-		<div class="slide" style="background-image: url('img/slides/slide_3.jpg');">
-			<div class="container">
-				<div class="row align-items-center">
-					<div class="home-content">
-						<p>We are Getting Married!</p>
-						<h1>Jorge & Victoria</h1>
-						<span>July 6 2024</span>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- Slide end -->
 	</section>
 	<!-- Home Section end -->
 
@@ -199,7 +173,7 @@
 					<h2>Celebrate our Love</h2>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row justify-content-center">
 				<!-- Item start -->
 				<div class="event-item">
 					<div class="event-item-inner">
@@ -208,6 +182,7 @@
 						<span class="time">TBD</span>
 						<p>{ Ceremony Location }</p>
 						<p>The ceremony will be held in Miami, FL</p>
+						<img src="img/event/rose.svg" alt="Rose Icon">
 					</div>
 				</div>
 				<!-- Item end -->
@@ -220,6 +195,7 @@
 						<p>{ Cutler Bay Banquet Hall }</p>
 						<p>18901 SW 106th Ave Suite A-204, Miami, FL 33157</p>
 						<p>Located in: Centre At Cutler Bay </p>
+						<img src="img/event/rose.svg" alt="Rose Icon">
 					</div>
 				</div>
 				<!-- Item end -->
