--- a/wedding_website/index.html
+++ b/wedding_website/index.html
@@ -170,7 +170,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="section-title">
-					<h2>Celebrate our Love</h2>
+					<h2>Let's Celebrate!</h2>
 				</div>
 			</div>
 			<div class="row justify-content-center">
@@ -204,7 +204,76 @@
 	</section>
 	<!-- Event Section end -->
 
-
+	<!-- People Section start -->
+	<section class="people-section">
+		<div class="container">
+			<div class="row">
+				<div class="section-title">
+					<h2>Wedding Party</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="people-filter">
+					<a href="javascript:void();" data-target="bridesmaids" class="filter-btn active">Bridesmaids</a>
+					<a href="javascript:void();" data-target="groomsmen" class="filter-btn">Groomsmen</a>
+				</div>
+			</div>
+			<!-- Bridesmaids start -->
+			<div class="row justify-content-center">
+				<!-- People Item start -->
+				<div class="people-item" data-category="bridesmaids">
+					<div class="people-item-inner">
+						<img src="img/bridesmaids/default.png" alt="Photo of Maid of Honor">
+						<h4>Jasmine Tran</h4>
+						<p>Maid of Honor</p>
+					</div>
+				</div>
+				<!-- People Item end -->
+				<!-- People Item start -->
+				<div class="people-item" data-category="bridesmaids">
+					<div class="people-item-inner">
+						<img src="img/bridesmaids/default.png" alt="Photo of Ashley">
+						<h4>Ashley-Marie Delgado</h4>
+						<p>Bridesmaid</p>
+					</div>
+				</div>
+				<!-- People Item end -->
+			</div>
+			<!-- Bridesmaids end -->
+			<!-- Groomsmen start -->
+			<div class="row justify-content-center">
+				<!-- People Item start -->
+				<div class="people-item" data-category="groomsmen">
+					<div class="people-item-inner">
+						<img src="img/groomsmen/default.png" alt="Photo of Best Man">
+						<h4>Carlos Rodriguez</h4>
+						<p>Best Man</p>
+					</div>
+				</div>
+				<!-- People Item end -->
+				<!-- People Item start -->
+				<div class="people-item" data-category="groomsmen">
+					<div class="people-item-inner">
+						<img src="img/groomsmen/default.png" alt="Photo of Kevin">
+						<h4>Ricardo Pons</h4>
+						<p>Groomsman</p>
+					</div>
+				</div>
+				<!-- People Item end -->
+				<!-- People Item start -->
+				<div class="people-item" data-category="groomsmen">
+					<div class="people-item-inner">
+						<img src="img/groomsmen/default.png" alt="Photo of Kevin">
+						<h4>Kevin Aramboles</h4>
+						<p>Groomsman</p>
+					</div>
+				</div>
+				<!-- People Item end -->
+			</div>
+			<!-- Groomsmen end -->
+		</div>
+	</section>
+	<!-- People Section end -->
 
 
 
