Halfway through Part 6
17:10

--- a/wedding_website/index.html
+++ b/wedding_website/index.html
@@ -276,6 +276,79 @@
 	<!-- People Section end -->
 
 
+	<!-- Gallery Section start -->
+	<section class="gallery-section">
+		<div class="container">
+			<div class="row">
+				<div class="section-title">
+					<h2>Our Memories</h2>
+				</div>
+			</div>
+			<div class="row">
+				<!-- Gallery item start -->
+				<div class="gallery-item">
+					<div class="gallery-item-inner">
+						<img src="img/gallery/thumb/1.jpg" data-large="img/gallery/large/1.jpg" alt="Couple gallery">
+					</div>
+				</div>
+				<!-- Gallery item end -->
+				<!-- Gallery item start -->
+				<div class="gallery-item">
+					<div class="gallery-item-inner">
+						<img src="img/gallery/thumb/2.jpg" data-large="img/gallery/large/2.jpg" alt="Couple gallery">
+					</div>
+				</div>
+				<!-- Gallery item end -->
+				<!-- Gallery item start -->
+				<div class="gallery-item">
+					<div class="gallery-item-inner">
+						<img src="img/gallery/thumb/3.jpg" data-large="img/gallery/large/3.jpg" alt="Couple gallery">
+					</div>
+				</div>
+				<!-- Gallery item end -->
+				<!-- Gallery item start -->
+				<div class="gallery-item">
+					<div class="gallery-item-inner">
+						<img src="img/gallery/thumb/4.jpg" data-large="img/gallery/large/4.jpg" alt="Couple gallery">
+					</div>
+				</div>
+				<!-- Gallery item end -->
+				<!-- Gallery item start -->
+				<div class="gallery-item">
+					<div class="gallery-item-inner">
+						<img src="img/gallery/thumb/5.jpg" data-large="img/gallery/large/5.jpg" alt="Couple gallery">
+					</div>
+				</div>
+				<!-- Gallery item end -->
+				<!-- Gallery item start -->
+				<div class="gallery-item">
+					<div class="gallery-item-inner">
+						<img src="img/gallery/thumb/6.jpg" data-large="img/gallery/large/6.jpg" alt="Couple gallery">
+					</div>
+				</div>
+				<!-- Gallery item end -->
+			</div>
+		</div>
+	</section>
+	<!-- Gallery Section end -->
+
+	<!-- Gallery popup start -->
+	<div class="gallery-popup">
+		<div class="gp-container">
+			<div class="gp-counter">1/6</div>
+			<div class="gp-close">&times;</div>
+			<img src="img/gallery/large/1.jpg" alt="Gallery img">
+			<div class="gp-controls">
+				<div class="prev">
+					<i class="fas fa-angle-left"></i>
+				</div>
+				<div class="next">
+					<i class="fas fa-angle-right"></i>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Gallery popup end -->
 
 
 	<!-- jquery -->
