--- a/wedding_website/index.html
+++ b/wedding_website/index.html
@@ -22,6 +22,9 @@
 				<div class="logo">
 					<a href="index.html"> J & V</a>
 				</div>
+				<div class="hamburger-btn">
+					<span></span>
+				</div>
 				<div class="nav">
 					<ul>
 						<li><a href="#" class="active">Home</a></li>
