Added Jasmine's photo and Julian to the bridesmaid section

--- a/wedding_website/index.html
+++ b/wedding_website/index.html
@@ -228,7 +228,7 @@
 				<!-- People Item start -->
 				<div class="people-item" data-category="bridesmaids">
 					<div class="people-item-inner">
-						<img src="img/bridesmaids/default.png" alt="Photo of Maid of Honor">
+						<img src="img/bridesmaids/Jasmine.jpg" alt="Photo of Maid of Honor">
 						<h4>Jasmine Tran</h4>
 						<p>Maid of Honor</p>
 					</div>
@@ -240,6 +240,15 @@
 						<img src="img/bridesmaids/Ashley.jpg" alt="Photo of Ashley">
 						<h4>Ashley-Marie Delgado</h4>
 						<p>Bridesmaid</p>
+					</div>
+				</div>
+				<!-- People Item end -->
+				<!-- People Item start -->
+				<div class="people-item" data-category="bridesmaids">
+					<div class="people-item-inner">
+						<img src="img/bridesmaids/default.png" alt="Photo of Julian">
+						<h4>Julian Fernandez</h4>
+						<p>Bridesman</p>
 					</div>
 				</div>
 				<!-- People Item end -->
