Updating Ceremony Info

--- a/wedding_website/index.html
+++ b/wedding_website/index.html
@@ -184,9 +184,10 @@
 					<div class="event-item-inner">
 						<h3>Ceremony</h3>
 						<span class="date">July 6, 2024</span>
-						<span class="time">TBD</span>
-						<p>{ Ceremony Location }</p>
-						<p>The ceremony will be held in Miami, FL</p>
+						<span class="time">6:00 - 7:00 PM</span>
+						<p>{ Cutler Bay Banquet Hall }</p>
+						<p>18901 SW 106th Ave Suite A-204, Miami, FL 33157</p>
+						<p>Located in: Centre At Cutler Bay </p>
 						<img src="img/event/rose.svg" alt="Rose Icon">
 					</div>
 				</div>
