--- a/index.html
+++ b/index.html
@@ -377,43 +377,53 @@
 			</div>
 			<div class="row">
 				<div class="rsvp-form">
-					<form action="" class="form">
+					<form action="" class="form" id="RSVP-FORM">
 						<div class="row">
 							<div class="input-group w50">
-								<input type="text" class="input-control" placeholder="Name">
+								<label>
+									<input type="text" class="input-control" id="RSVP-NAME" placeholder="Name">
+								</label>
 							</div>
 							<div class="input-group w50">
-								<input type="text" class="input-control" placeholder="Email">
+								<label>
+									<input type="text" class="input-control" id="RSVP-EMAIL" placeholder="Email">
+								</label>
 							</div>
 						</div>
 						<div class="row">
 							<div class="input-group">
-								<select class="input-control">
-									<option value="">Number of Guests</option>
-									<option value="1">1</option>
-									<option value="2">2</option>
-									<option value="3">3</option>
-									<option value="4">4</option>
-									<option value="5">5</option>
-								</select>
+								<label>
+									<select class="input-control" id="RSVP-GUEST-NUM">
+										<option value="">Number of Guests</option>
+										<option value="1">1</option>
+										<option value="2">2</option>
+										<option value="3">3</option>
+										<option value="4">4</option>
+										<option value="5">5</option>
+									</select>
+								</label>
 							</div>
 						</div>
 						<div class="row">
 							<div class="input-group">
-								<select class="input-control">
-									<option value="I am attending">I am attending</option>
-									<option value="I am not attending">I am not attending</option>
-								</select>
+								<label>
+									<select class="input-control" id="RSVP-ATTENDING">
+										<option value="I am attending">I am attending</option>
+										<option value="I am not attending">I am not attending</option>
+									</select>
+								</label>
 							</div>
 						</div>
 						<div class="row">
 							<div class="input-group">
-								<textarea placeHolder="Message" class="input-control"></textarea>
+								<label>
+									<textarea placeHolder="Message" class="input-control" id="RSVP-MESSAGE"></textarea>
+								</label>
 							</div>
 						</div>
 						<div class="row">
 							<div class="input-group">
-								<button type="submit" class="btn-1">Send</button>
+								<button type="submit" class="btn-1" id="RSVP-SEND">Send</button>
 							</div>
 						</div>
 					</form>
@@ -451,5 +461,8 @@
 
 	<!-- alternative -->
 	<script src="scripts/alternative.js"></script>
+
+	<!-- Google Sheets API -->
+<!--	<script src="https://apis.google.com/js/api.js"></script>-->
 </body>
 </html>
