--- a/index.html
+++ b/index.html
@@ -74,13 +74,11 @@
 				<div class="couple">
 					<img src="img/Victoria/Victoria_1.jpg" alt="Victoria wearing a white V-neck shirt and a black high waisted skirt opening a black door">
 					<h3>Victoria Fernandez</h3>
-					<p>TODO: Fill out information about me. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 				</div>
 				<div class="couple">
 					<i class="fas fa-heart"></i>
 					<img src="img/Jorge/Jorge_3.jpg" alt="Jorge">
 					<h3>Jorge Riera</h3>
-					<p>TODO: Fill out information about Jorge. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
 				</div>
 			</div>
 		</div>
@@ -182,22 +180,9 @@
 				<!-- Item start -->
 				<div class="event-item">
 					<div class="event-item-inner">
-						<h3>Ceremony</h3>
+						<h3>Ceremony & Reception</h3>
 						<span class="date">July 6, 2024</span>
-						<span class="time">6:00 - 7:00 PM</span>
-						<p>{ Cutler Bay Banquet Hall }</p>
-						<p>18901 SW 106th Ave Suite A-204, Miami, FL 33157</p>
-						<p>Located in: Centre At Cutler Bay </p>
-						<img src="img/event/rose.svg" alt="Rose Icon">
-					</div>
-				</div>
-				<!-- Item end -->
-				<!-- Item start -->
-				<div class="event-item">
-					<div class="event-item-inner">
-						<h3>Reception</h3>
-						<span class="date">July 6, 2024</span>
-						<span class="time">7:00 - 11:00 PM</span>
+						<span class="time">6:00 - 11:00 PM</span>
 						<p>{ Cutler Bay Banquet Hall }</p>
 						<p>18901 SW 106th Ave Suite A-204, Miami, FL 33157</p>
 						<p>Located in: Centre At Cutler Bay </p>
@@ -229,7 +214,7 @@
 				<!-- People Item start -->
 				<div class="people-item" data-category="bridesmaids">
 					<div class="people-item-inner">
-						<img src="img/bridesmaids/Jasmine.jpg" alt="Photo of Maid of Honor">
+						<img src="img/bridesmaids/Jasmine.jpg" alt="Photo of Jasmine">
 						<h4>Jasmine Tran</h4>
 						<p>Maid of Honor</p>
 					</div>
@@ -260,7 +245,7 @@
 				<!-- People Item start -->
 				<div class="people-item" data-category="groomsmen">
 					<div class="people-item-inner">
-						<img src="img/groomsmen/default.png" alt="Photo of Best Man">
+						<img src="img/groomsmen/default.png" alt="Photo of Carlos">
 						<h4>Carlos Rodriguez</h4>
 						<p>Best Man</p>
 					</div>
@@ -269,7 +254,7 @@
 				<!-- People Item start -->
 				<div class="people-item" data-category="groomsmen">
 					<div class="people-item-inner">
-						<img src="img/groomsmen/default.png" alt="Photo of Kevin">
+						<img src="img/groomsmen/default.png" alt="Photo of Ricardo">
 						<h4>Ricardo Pons</h4>
 						<p>Groomsman</p>
 					</div>
