Adding the Gift Registry

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
 						<li><a data-scroll-nav="0" href="#" class="active">Home</a></li>
 						<li><a data-scroll-nav="1" href="#">Couple</a></li>
 						<li><a data-scroll-nav="2" href="#">Story</a></li>
-						<li><a data-scroll-nav="3" href="#">Events</a></li>
+						<li><a data-scroll-nav="3" href="#">Event</a></li>
 						<li><a data-scroll-nav="4" href="#">People</a></li>
 						<li><a data-scroll-nav="5" href="#">Gallery</a></li>
 						<li><a data-scroll-nav="6" href="#">RSVP</a></li>
+						<li><a data-scroll-nav="7" href="#">Registry</a></li>
 						<!-- Add Gift registry link -->
 					</ul>
 				</div>
@@ -245,7 +246,7 @@
 				<!-- People Item start -->
 				<div class="people-item" data-category="groomsmen">
 					<div class="people-item-inner">
-						<img src="img/groomsmen/default.png" alt="Photo of Carlos">
+						<img src="img/groomsmen/Carlos.jpg" alt="Photo of Carlos">
 						<h4>Carlos Rodriguez</h4>
 						<p>Best Man</p>
 					</div>
@@ -417,6 +418,58 @@
 		</div>
 	</section>
 	<!-- RSVP section end -->
+
+
+	<!-- Gift Registry section start -->
+	<section class="registry-section" data-scroll-index="7">
+		<div class="container">
+			<div class="row">
+				<div class="section-title">
+					<h2>Gift Registry</h2>
+					<p>Should you wish to give us a gift, we kindly ask for cash contributions to start our new life together!</p>
+				</div>
+			</div>
+			<div class="row justify-content-center">
+				<div class="registry-item">
+					<div class="registry-item-inner">
+						<img src="img/gift-registry/paypal-p.svg" alt="Paypal">
+						<h4>Paypal</h4>
+						<p>@Tori8100</p>
+					</div>
+				</div>
+				<div class="registry-item">
+					<div class="registry-item-inner">
+						<img src="img/gift-registry/Apple_logo_black.svg" alt="Apple Cash">
+						<h4>Apple Cash</h4>
+						<p>(305) 926-2755</p>
+					</div>
+				</div>
+				<div class="registry-item">
+					<div class="registry-item-inner">
+						<img src="img/gift-registry/cashapp.svg" alt="Cashapp">
+						<h4>Cashapp</h4>
+						<p>(786) 352-3106</p>
+					</div>
+				</div>
+				<div class="registry-item">
+					<div class="registry-item-inner">
+						<img src="img/gift-registry/zelle_logo_icon_249110.png" alt="Zelle">
+						<h4>Zelle</h4>
+						<p>(786) 352-3106</p>
+					</div>
+				</div>
+			</div>
+			<div class="section-end">
+				<p>Please label your gift as a wedding gift when sending! Feel free to suggest a use, for example:</p>
+				<ul>
+					<li>Honeymoon Fund</li>
+					<li>House Down Payment</li>
+					<li>Emergency Fund</li>
+					<li>Shared Experiences</li>
+				</ul>
+			</div>
+		</div>
+	</section>
 
 
 	<!-- footer start -->
