--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
 			<div class="container">
 				<div class="row align-items-center">
 					<div class="home-content">
-						<p>We are Getting Married!</p>
 						<h1>Jorge & Victoria</h1>
 						<span>July 6 2024</span>
 					</div>
@@ -361,58 +360,14 @@
 					<p>Please kindly respond before June 8, 2024</p>
 				</div>
 			</div>
-			<div class="row">
-				<div class="rsvp-form">
-					<form action="" class="form" id="RSVP-FORM">
-						<div class="row">
-							<div class="input-group w50">
-								<label>
-									<input type="text" class="input-control" id="RSVP-NAME" placeholder="Name">
-								</label>
-							</div>
-							<div class="input-group w50">
-								<label>
-									<input type="text" class="input-control" id="RSVP-EMAIL" placeholder="Email">
-								</label>
-							</div>
-						</div>
-						<div class="row">
-							<div class="input-group">
-								<label>
-									<select class="input-control" id="RSVP-GUEST-NUM">
-										<option value="">Number of Guests</option>
-										<option value="1">1</option>
-										<option value="2">2</option>
-										<option value="3">3</option>
-										<option value="4">4</option>
-										<option value="5">5</option>
-									</select>
-								</label>
-							</div>
-						</div>
-						<div class="row">
-							<div class="input-group">
-								<label>
-									<select class="input-control" id="RSVP-ATTENDING">
-										<option value="I am attending">I am attending</option>
-										<option value="I am not attending">I am not attending</option>
-									</select>
-								</label>
-							</div>
-						</div>
-						<div class="row">
-							<div class="input-group">
-								<label>
-									<textarea placeHolder="Message" class="input-control" id="RSVP-MESSAGE"></textarea>
-								</label>
-							</div>
-						</div>
-						<div class="row">
-							<div class="input-group">
-								<button type="submit" class="btn-1" id="RSVP-SEND">Send</button>
-							</div>
-						</div>
-					</form>
+			<div class="row justify-content-center">
+				<div class="rsvp-link">
+					<a href="https://forms.gle/6hZbXbLTFTS841ZA9" target="_blank" rel="noopener noreferrer"><span>RSVP</span></a>
+				</div>
+			</div>
+			<div class="row justify-content-center">
+				<div class="rsvp-img">
+					<img src="img/rsvp-image-cropped.jpg" alt="Picture of the happy couple, hoping you will fill out the RSVP form!">
 				</div>
 			</div>
 		</div>
