Add hyperlinks to gift registry

--- a/index.html
+++ b/index.html
@@ -387,35 +387,35 @@
 			<div class="row justify-content-center">
 				<div class="registry-item">
 					<div class="registry-item-inner">
-						<img src="img/gift-registry/paypal-p.svg" alt="Paypal">
+						<a href="https://paypal.me/Tori8100" target="_blank" rel="noopener noreferrer"><img src="img/gift-registry/paypal-p.svg" alt="Paypal"></a>
 						<h4>Paypal</h4>
 						<p>@Tori8100</p>
 					</div>
 				</div>
 				<div class="registry-item">
 					<div class="registry-item-inner">
-						<img src="img/gift-registry/Apple_logo_black.svg" alt="Apple Cash">
+						<a href="https://support.apple.com/en-us/105013" target="_blank" rel="noopener noreferrer"><img src="img/gift-registry/Apple_logo_black.svg" alt="Apple Cash"></a>
 						<h4>Apple Cash</h4>
 						<p>(305) 926-2755</p>
 					</div>
 				</div>
 				<div class="registry-item">
 					<div class="registry-item-inner">
-						<img src="img/gift-registry/cashapp.svg" alt="Cashapp">
-						<h4>Cashapp</h4>
+						<a href="https://cash.app/" target="_blank" rel="noopener noreferrer"><img src="img/gift-registry/cashapp.svg" alt="Cash App"></a>
+						<h4>Cash App</h4>
 						<p>(786) 352-3106</p>
 					</div>
 				</div>
 				<div class="registry-item">
 					<div class="registry-item-inner">
-						<img src="img/gift-registry/zelle_logo_icon_249110.png" alt="Zelle">
+						<a href="https://www.zellepay.com/" target="_blank" rel="noopener noreferrer"><img src="img/gift-registry/zelle_logo_icon_249110.png" alt="Zelle"></a>
 						<h4>Zelle</h4>
 						<p>(786) 352-3106</p>
 					</div>
 				</div>
 			</div>
 			<div class="section-end">
-				<p>Please label your gift as a wedding gift when sending! Feel free to suggest a use, for example:</p>
+				<p>If given the option, please label your gift as a wedding gift when sending! Feel free to suggest a use, for example:</p>
 				<ul>
 					<li>Honeymoon Fund</li>
 					<li>House Down Payment</li>
