Add Julian's photo

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 				<!-- People Item start -->
 				<div class="people-item" data-category="bridesmaids">
 					<div class="people-item-inner">
-						<img src="img/bridesmaids/default.png" alt="Photo of Julian">
+						<img src="img/bridesmaids/Julian.jpg" alt="Photo of Julian">
 						<h4>Julian Fernandez</h4>
 						<p>Bridesman</p>
 					</div>
