Add Ricardo's photo

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 				<!-- People Item start -->
 				<div class="people-item" data-category="groomsmen">
 					<div class="people-item-inner">
-						<img src="img/groomsmen/default.png" alt="Photo of Ricardo">
+						<img src="img/groomsmen/Ricky.jpg" alt="Photo of Ricardo">
 						<h4>Ricardo Pons</h4>
 						<p>Groomsman</p>
 					</div>
