Add Kevin's photo

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 				<!-- People Item start -->
 				<div class="people-item" data-category="groomsmen">
 					<div class="people-item-inner">
-						<img src="img/groomsmen/default.png" alt="Photo of Kevin">
+						<img src="img/groomsmen/Kevin.jpg" alt="Photo of Kevin">
 						<h4>Kevin Aramboles</h4>
 						<p>Groomsman</p>
 					</div>
